[tool.poetry]
name = "it-будка-сайт"
version = "0.1.0"
description = ""
authors = ["lev"]

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"
Sphinx-Substitution-Extensions = "^2022.2.16"
sphinx-panels = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
